After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 756001 - rtmpsrc: plug memory-leaks
rtmpsrc: plug memory-leaks
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other All
: Normal major
: 1.6.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-10-02 22:10 UTC by Håvard Graff (hgr)
Modified: 2015-10-05 12:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.52 KB, patch)
2015-10-02 22:10 UTC, Håvard Graff (hgr)
committed Details | Review

Description Håvard Graff (hgr) 2015-10-02 22:10:30 UTC
Memoryleaks are no fun.
Comment 1 Håvard Graff (hgr) 2015-10-02 22:10:55 UTC
Created attachment 312591 [details] [review]
patch
Comment 2 Sebastian Dröge (slomo) 2015-10-03 16:53:20 UTC
commit cb20105aa5ef9009edf18e67a5fbfd576113d1e6
Author: Havard Graff <havard.graff@gmail.com>
Date:   Thu Oct 1 11:18:52 2015 +0200

    rtmpsrc: plug memory-leaks
    
    https://bugzilla.gnome.org/show_bug.cgi?id=756001