rtmpsrc: plug memory-leaks

https://bugzilla.gnome.org/show_bug.cgi?id=756001